--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,17 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
-  #web:
-  ## TODO
+  web:
+    build: .
+    command: bundle exec rails server
+    volumes:
+      - .:/rails
+    depends_on:
+      - db
+      - redis
+    environment:
+      DATABASE_URL: postgresql://postgres:password@db:5432/store_development
+      REDIS_URL: redis://redis:6379/0
   test:
     build: .
     command: bundle exec rspec
@@ -27,7 +36,7 @@ services:
       - db
       - redis
     environment:
-      DATABASE_URL: postgresql://postgres:password@db:5432/myapp_test
+      DATABASE_URL: postgresql://postgres:password@db:5432/store_test
       REDIS_URL: redis://redis:6379/0
 volumes:
   postgres13:
