--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
     environment:
       DATABASE_URL: postgresql://postgres:password@db:5432/store_test
       REDIS_URL: redis://redis:6379/0
+      RAILS_ENV: test
 volumes:
   postgres13:
   redis_data:
-
