--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -7,3 +7,8 @@
   - mailers
   - active_storage_analysis
   - active_storage_purge
+:scheduler:
+  :schedule:
+    mark_cart_as_abandoned:
+      every: '3 hours'
+      class: MarkCartAsAbandonedJob
