--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,17 @@ services:
     environment:
       DATABASE_URL: postgresql://postgres:password@db:5432/store_development
       REDIS_URL: redis://redis:6379/0
+  sidekiq:
+    build: .
+    command: bundle exec sidekiq
+    volumes:
+      - .:/rails
+    depends_on:
+      - db
+      - redis
+    environment:
+      DATABASE_URL: postgresql://postgres:password@db:5432/store_development
+      REDIS_URL: redis://redis:6379/0
   test:
     build: .
     command: bundle exec rspec
