fix(docker-compose): web access adjustments

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,9 @@ services:
       - redis_data:/data
   web:
     build: .
-    command: bundle exec rails server
+    command: bundle exec rails server -b 0.0.0.0
+    ports:
+      - "3000:3000"
     volumes:
       - .:/rails
     depends_on:
